# YiLuAn

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_STATUS.md  README.md  TASK_BREAKDOWN.md  TEAM.md  docker-compose.alertmanager.yml  polish-backlog.md
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  seed.sql
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/scripts/: build_api_md.py  check_migration_reversibility.py  dump_openapi.py  gen_seed.py
backend/tests/: conftest.py  test_account_deletion.py  test_account_deletion_orders.py  test_admin.py  test_admin_companions.py  test_alembic_a1d0c0de0030_smoke.py  test_aliyun_sms.py  test_auth.py  test_auth_apple.py  test_avatar.py  test_chat_schema.py  test_chats.py  test_companion_certification.py  test_companion_profile.py  test_companion_stats.py  test_coverage_boost_api.py  test_coverage_boost_repos.py  test_coverage_boost_services.py  test_coverage_boost_w18.py  test_cron_cleanup_emergency_pii.py  test_device_token.py  test_emergency.py  test_emergency_encryption.py  test_full_lifecycle.py  test_health.py  test_hospitals.py  test_log_retention.py  test_metrics.py  test_models_pg_smoke.py  test_notifications.py  test_notifications_deeplink_f02.py  test_notifications_triggers.py  test_order_expiry.py  test_order_notifications_reject_expiry.py  test_orders.py  test_patient_profile.py  test_payment_boundary.py  test_payment_callback_blocker.py  (+30 more)
(+627 files in other folders)
