[project]
name = "yiluan-backend"
version = "0.1.0"
description = "YiLuAn - Medical Companion Service Backend"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not smoke'"
markers = [
    "smoke: slow smoke tests requiring a real Postgres (run with `pytest -m smoke`)",
    "e2e: end-to-end backend API tests requiring real Postgres+Redis (run with `pytest -m e2e`)",
]

[tool.coverage.run]
# Use Python 3.12 sys.monitoring tracer; the legacy C tracer mis-attributes
# coverage in async generator / try/except blocks (~4% under-report).
core = "sysmon"
branch = false
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
